# thesis-repo

./: Harmony_empty.world  impedance_controller.cpp  impedance_controller.h
gravity_compensation/: CMakeLists.txt  gravity_compensation_plugins.xml  package.xml
gravity_compensation/config/: rrbot_gravity_compensation.yaml  tiago_pal-gripper_gravity_compensation.yaml  tiago_pal-gripper_gravity_compensation_simulation.yaml  tiago_pal-hey5_gravity_compensation.yaml  tiago_pal-hey5_gravity_compensation_simulation.yaml  tiago_schunk-wsg_gravity_compensation.yaml  tiago_schunk-wsg_gravity_compensation_simulation.yaml
gravity_compensation/include/gravity_compensation/: gravity_compensation.h
gravity_compensation/launch/: gravity_compensation.launch
gravity_compensation/src/: gravity_compensation.cpp
parameters_extraction/: CMakeLists.txt  package.xml
parameters_extraction/src/: parameters_extraction.cpp  parameters_extraction.h
